--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,10 @@
     .text_para {
         @apply text-[18px] leading-[30px] font-[400] text-textColor mt-[18px];
     }
+
+    .header {
+        @apply bg-[url('./assets/images/mask.png')] bg-no-repeat bg-center bg-cover w-full h-[100px] leading-[100px]
+    }
 }
 
 @media only screen and (max-width: 1024px) {
@@ -44,5 +48,40 @@
     
     .text_para {
         @apply text-[16px] leading-7 mt-3;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .navigation {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        background: rgba(0, 0, 0, 0.7);
+        display: flex;
+        justify-content: flex-end;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .menu {
+        width: 75%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        background: #fff;
+        z-index: 200;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 1rem;
+        line-height: 30px;
+    }
+
+    .show__menu {
+        transform: translateX(0%);
     }
 }
