--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,16 @@
         @apply text-[44px] leading-[54px] font-[700] text-headingColor;
     }
 
-    .text_para {
-        @apply text-[18px] leading-[30px] font-[400] text-textColor mt-[18px];
+    .text__para {
+        @apply text-[18px] leading-[30px] font-[300] text-textColor mt-[16px];
     }
 
     .header {
         @apply bg-[url('./assets/images/mask.png')] bg-no-repeat bg-center bg-cover w-full h-[100px] leading-[100px]
+    }
+
+    .hero__section {
+        @apply bg-[url('./assets/images/hero-bg.png')] bg-no-repeat bg-center bg-cover
     }
 }
 
@@ -46,7 +50,7 @@
         @apply text-[26px] leading-[36px];
     }
     
-    .text_para {
+    .text__para {
         @apply text-[16px] leading-7 mt-3;
     }
 }
@@ -73,7 +77,7 @@
         top: 0;
         right: 0;
         background: #fff;
-        z-index: 200;
+        z-index: 100;
         flex-direction: column;
         justify-content: center;
         align-items: center;
